--- a/styles/site.css
+++ b/styles/site.css
@@ -137,6 +137,15 @@ hr {
   margin: 12px 0;
 }
 
+.LabelConversion .label {
+  display: inline-block;
+  width: 175px;
+  font-size: 10px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  margin: 12px 0;
+}
+
 .TwoCol {
   display: flex;
 }
